<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="2000dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginLeft="10dp"
        android:hint="@string/name_example" />
    <TextView
        android:id="@+id/type"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:paddingBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/etName" />

    <EditText
        android:id="@+id/etType"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/type"
        android:layout_alignLeft="@id/type"
        android:hint="@string/type_example" />
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_below="@id/etName"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:gravity="top|left"
        android:lines="3"
        android:minLines="3"
        android:layout_marginLeft="10dp"
        android:hint="@string/diagnosis_description_example"
        />
</RelativeLayout>