<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_google_translate"
        android:id="@+id/btnGoogleTranslate"
        android:layout_gravity="center"
        android:padding="30dp"
        android:background="@drawable/button_selector_effect"
        android:drawableLeft="@drawable/ic_g_translate"
        android:drawablePadding="10dp"
        android:textAllCaps="false"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:textSize="22sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/german"
            android:id="@+id/btnLangGer"
            android:layout_gravity="center"
            android:padding="30dp"
            android:background="@drawable/button_selector_effect"
            android:drawablePadding="10dp"
            android:textAllCaps="false"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:id="@+id/btnLangEn"
            android:layout_gravity="center"
            android:padding="30dp"
            android:background="@drawable/button_selector_effect"
            android:textAllCaps="false"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/french"
            android:id="@+id/btnLangFr"
            android:layout_gravity="center"
            android:padding="30dp"
            android:background="@drawable/button_selector_effect"
            android:textAllCaps="false"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/russian"
            android:id="@+id/btnLangRu"
            android:layout_gravity="center"
            android:padding="30dp"
            android:background="@drawable/button_selector_effect"
            android:textAllCaps="false"
            android:layout_marginHorizontal="10dp"
            />
    </LinearLayout>

</LinearLayout>