<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <WebView
        android:id="@+id/modelView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3">
    </WebView>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorLightBlue">

        <LinearLayout
            android:id="@+id/llModels"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anomalous_medical"
                android:id="@+id/btnAnomalous"
                android:layout_gravity="center"
                android:paddingHorizontal="30dp"
                android:background="@drawable/button_selector_effect"
                android:drawableLeft="@drawable/ic_model"
                android:drawablePadding="10dp"
                android:textAllCaps="false"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jaw_joint"
                android:textSize="25sp"
                android:textColor="@color/colorDarkBlue"
                />
            <View android:background="@color/colorDarkBlue"
                android:layout_width = "match_parent"
                android:layout_height="1dp"
                />
            <ImageView
                android:id="@+id/iv_kauen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/model_mastikation"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mastication"
                android:padding="5dp"
                android:singleLine="true"/>
            <ImageView
                android:id="@+id/iv_bruxismus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/model_bruxismus"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bruxism"
                android:padding="5dp"
                android:singleLine="true"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nerves"
                android:textSize="25sp"
                android:textColor="@color/colorDarkBlue"
                android:paddingTop="10dp"
                />
            <View android:background="@color/colorDarkBlue"
                android:layout_width = "match_parent"
                android:layout_height="1dp"/>
            <ImageView
                android:id="@+id/iv_nervensystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/model_nervensystem"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nervous_system"
                android:padding="5dp"
                android:singleLine="true"/>
            <ImageView
                android:id="@+id/iv_neuropathie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/model_neuropathie"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/peripheral_neuropathy"
                android:padding="5dp"
                android:singleLine="true"/>
            <ImageView
                android:id="@+id/iv_myelinscheide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/model_myelinscheide"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/damaged_myelin_sheath"
                android:padding="5dp"
                android:singleLine="true"/>
            <ImageView
                android:id="@+id/iv_migraene"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/model_migraene"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/migraine"
                android:padding="5dp"
                android:singleLine="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teeth"
                android:textSize="25sp"
                android:textColor="@color/colorDarkBlue"
                android:paddingTop="10dp"
                />
            <View android:background="@color/colorDarkBlue"
                android:layout_width = "match_parent"
                android:layout_height="1dp"/>
            <ImageView
                android:id="@+id/iv_querschnitt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/model_querschnitt"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tooth_cross_section"
                android:padding="5dp"
                android:singleLine="true"/>
            <ImageView
                android:id="@+id/iv_sensitiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/model_empfindlich"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensitive_teeth"
                android:padding="5dp"
                android:singleLine="true"/>
            <ImageView
                android:id="@+id/iv_erosion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/model_erosion"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tooth_erosion"
                android:padding="5dp"
                android:singleLine="true"/>
            <ImageView
                android:id="@+id/iv_hoehlen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/model_hoehlen"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tooth_cavity"
                android:padding="5dp"
                android:singleLine="true"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>